GANTRYFIVE-166: Fix for joomla fixed footer overlap

--- a/platforms/common/css-compiled/admin.css
+++ b/platforms/common/css-compiled/admin.css
@@ -165,7 +165,7 @@ a {
     max-width: 300px; }
 
 #footer {
-  margin-bottom: 1rem;
+  margin-bottom: 3.5rem;
   text-align: center;
   font-weight: 500; }
   #footer a {
