--- a/platforms/common/scss/admin/_core.scss
+++ b/platforms/common/scss/admin/_core.scss
@@ -125,7 +125,7 @@ a {
 
 // Footer
 #footer {
-    margin-bottom: 1rem;
+    margin-bottom: 3.5rem;
     text-align: center;
     font-weight: $font-weight-medium;
     a {
